# dash_pi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bluetooth_install_stretch.sh
include/: common.hpp  dash_pi.hpp  dash_pi_main.hpp  utils.hpp
include/components/: control_bar.hpp
include/controllers/: audio_controller.hpp  playback_controller.hpp  volume_controller.hpp
include/renderers/: control_bar.hpp  nav_bar.hpp
install_scripts/: 99-com.rules.patch  a2dp-autoconnect  bluealsa-aplay@.service  config.txt.patch  install_bluetooth_raspbian_stretch.sh  install_prereqs.sh  install_sfml_pi.sh  install_shutdown_listener.sh
install_scripts/patches/: main.conf.patch
src/: audio_controller.cpp  control_bar.cpp  dash_pi_main.cpp  main.cpp  nav_bar.cpp  playback_controller.cpp
src/controllers/: playback_controller.cpp  volume_controller.cpp
src/renderers/: control_bar.cpp  nav_bar.cpp
